--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
     <![endif]-->
   </head>
   <body>
+    <%= render 'layouts/navbar1' %>
+    <div class="container-fluid">
 
-    <div class="container">
       <%= yield %>
     </div>
   </body>
