--- a/app/views/static_page/manuscript.html.erb
+++ b/app/views/static_page/manuscript.html.erb
@@ -1,1 +1,37 @@
 
+ <div class="page-body">
+<!-- Navbar 2 html -->
+  <div class='col-sm-1 navbar2-container '>
+    <img src="..." alt="..." class="profile-pic">
+     <p> view my profile </p>
+  </div>
+
+
+<!-- Home Page buttons -->
+  <div class='col-sm-1 button-container well'>
+    <button type="button" class="btn btn-primary" aria-label="Left Align">
+      Create New Capsule
+    </button>
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      Add Muses
+    </button>
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      Chat
+    </button>
+  </div>
+
+<!-- Muses html-->
+ <div class='col-sm-3 muses-container well'>
+    <h2>Muses</h2>
+ </div>
+
+ <!-- Capsule html-->
+<div class='col-sm-3 capsule-container well'>
+  <h2>Capusles</h2>
+</div>
+
+ <!-- Notification html -->
+    <div class='col-sm-4 notifications-container well'>
+           <h3>Notification Panel</h3>
+    </div>
+</div>
